--- a/src/style/_navigation.scss
+++ b/src/style/_navigation.scss
@@ -6,7 +6,6 @@
     justify-content: space-around;
     .portfolio_navigation_des_projets {
       display: flex;
-      flex-direction: column;
       align-items: center;
       position: absolute;
       opacity: 0;
@@ -14,13 +13,19 @@
       margin-left: 2em;
     }
     .navigation_li:hover > .portfolio_navigation_des_projets {
-      transition-duration: 3s;
+      transition-duration: 2s;
       transform: scale(1.02);
       opacity: 1;
     }
   }
   .li_navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100px;
+    height: 70px;
+    font-size: 1em;
+    font-weight: 300;
   }
   .li_navigation:hover {
     transform: scale(1.05);
