--- a/src/style/_projet-1.scss
+++ b/src/style/_projet-1.scss
@@ -1,3 +1,43 @@
-.projet-1-button {
-  padding: 1em;
+.projet1_container {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  padding: 5em;
+  background-color: rgb(40, 141, 229);
+  .projet1_h1,
+  .projet_H2 {
+    background-color: rgb(120, 161, 194);
+    font-size: 2em;
+    font-weight: 800;
+    text-align: center;
+  }
+  .projet_H2 {
+    letter-spacing: 1rem;
+    margin: auto;
+    width: 80%;
+    color: rgb(26, 28, 28);
+  }
+  .projet-1-button {
+    padding: 1em;
+    width: 30%;
+    margin: auto;
+  }
+}
+.projet1_container_pour_contextApi {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 100px auto;
+  gap: 2rem;
+  padding: 2rem;
+  background-color: rgb(146, 192, 232);
+  font-size: 1.5rem;
+  font-weight: 800;
+  text-align: center;
+
+  .context_p {
+    border: solid 1px black;
+    border-radius: 15px;
+    padding: 2rem;
+  }
 }
